<resources>
    <string name="app_name">NotesMaker</string>
    <string name="add_note">ADD NOTE</string>
    <string name="title_activity_show">ShowActivity</string>
    <string name="title">Title</string>
    <string name="enter_title">Enter Title</string>
    <string name="description">Description</string>
    <string name="enter_description">Enter Description</string>
    <string name="button">Button</string>
    <string name="save">SAVE</string>
    <string name="delete">DELETE</string>
</resources>
